<resources>
    <string name="app_name">Inventory App</string>
    <string name="quantity">Quantity: %1$d</string>
    <string name="sale">sale</string>
    <string name="price">Price: %1$d</string>
    <string name="action_insert_dummy_data">insert dummy data</string>
    <string name="item_name_header">Name</string>
    <string name="item_name">Item Name</string>
    <string name="detail_price">Price</string>
    <string name="detail_quantity">Quantity</string>
    <string name="detail_supplier_name">Supplier Name</string>
    <string name="detail_supplier_email">Supplier Email</string>
    <string name="empty">Empty</string>
    <string name="edit_item">Edit Item</string>
    <string name="detail_supplier_phone">Supplier Phone</string>
    <string name="item_names">Item name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_price">Item Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="save">Save</string>
    <string name="delete_item">Delete item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="message_supplier">Message Supplier</string>
    <string name="empty_view_title_text">No Items Available</string>
    <string name="empty_view_subtitle_text">Press on the FAB or choose insert new dummy to add items</string>
</resources>