<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="6dp"
    tools:context="com.example.akl.inventoryapp.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemStyle"
            android:text="@string/item_name_header"/>

        <TextView
            style="@style/EditorFieldStyle"
            android:text="@string/empty"
            android:gravity="center"
            android:id="@+id/detail_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemStyle"
            android:text="@string/detail_price"/>

        <TextView
            style="@style/EditorFieldStyle"
            android:text="@string/empty"
            android:gravity="center"
            android:id="@+id/detail_price"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemStyle"
            android:text="@string/detail_quantity"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/sales_minus"/>

            <TextView
                style="@style/EditorFieldStyleModified"
                android:text="@string/empty"
                android:gravity="center"
                android:id="@+id/detail_quantity" />

            <Button
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/sales_plus"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemStyle"
            android:text="@string/detail_supplier_name"/>

        <TextView
            style="@style/EditorFieldStyle"
            android:text="@string/empty"
            android:gravity="center"
            android:id="@+id/detail_supplier_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemStyle"
            android:text="@string/detail_supplier_email"/>

        <TextView
            style="@style/EditorFieldStyle"
            android:text="@string/empty"
            android:gravity="center"
            android:id="@+id/detail_supplier_email"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemStyle"
            android:text="@string/detail_supplier_phone"/>

        <TextView
            style="@style/EditorFieldStyle"
            android:text="@string/empty"
            android:gravity="center"
            android:id="@+id/detail_supplier_phone" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/message_supplier"
        android:id="@+id/message_supplier"/>
</LinearLayout>