<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="8dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/item_name_tv"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:textSize="20sp"
        tools:text="hobaaaaaaaaaaaa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_price_tv"
            android:text="@string/price"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:id="@+id/item_quantity_tv"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/sale_button"
            android:layout_height="wrap_content"
            android:text="@string/sale" />

    </LinearLayout>


</LinearLayout>